# condaac

./: README.md  pyproject.toml
condaac/: cli.py  condaac.sh  condaac.tcss  install.py  list_envs.py  tui.py
